--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server",
-    "prod": "NODE_ENV=production BABEL_ENV=production webpack -p",
+    "prod": "cross-env NODE_ENV=production BABEL_ENV=production webpack -p",
     "lint": "eslint $npm_package_config_src",
     "flow": "flow $npm_package_config_src",
     "development": "npm run dev",
@@ -41,6 +41,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "dotenv": "^4.0.0",
     "eslint": "^3.18.0",
@@ -67,4 +68,3 @@
     "variant": "vue"
   }
 }
-
