--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server",
+    "dev": "cross-env NODE_ENV=development BABEL_ENV=development webpack-dev-server",
     "prod": "cross-env NODE_ENV=production BABEL_ENV=production webpack -p",
     "lint": "eslint $npm_package_config_src",
     "flow": "flow $npm_package_config_src",
