--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "src": "./src"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint && npm run flow",
     "dev": "cross-env NODE_ENV=development BABEL_ENV=development webpack-dev-server",
     "prod": "cross-env NODE_ENV=production BABEL_ENV=production webpack -p",
     "lint": "eslint $npm_package_config_src",
