--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+sudo: false
 language: node_js
 node_js:
   - "6"
 cache: yarn
 script:
   - npm run test
+cache:
+  directories:
+    - node_modules
