--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "homepage": "http://zcui.zoomcar.com",
   "author": "Hamid Raza <hamid.raza@zoomcar.com>",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
