--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "src": "./src"
   },
   "scripts": {
-    "test": "npm-run-all flow lint",
+    "test": "npm-run-all test:*",
     "dev": "cross-env NODE_ENV=development BABEL_ENV=development webpack-dev-server",
     "prod": "cross-env NODE_ENV=production BABEL_ENV=production webpack -p",
-    "lint": "eslint $npm_package_config_src",
-    "flow": "flow $npm_package_config_src",
+    "test:lint": "eslint $npm_package_config_src",
+    "test:flow": "flow $npm_package_config_src",
+    "test:jest": "jest $npm_package_config_src --coverage",
     "development": "npm run dev",
     "production": "npm run prod",
     "analyze:state": "webpack --profile --json > ./public/build/analyze.json",
     "analyze:server": "webpack-bundle-analyzer ./public/build/analyze.json -m server",
-    "analyze": "npm-run-all analyze:*"
+    "analyze": "npm-run-all analyze:*",
+    "precommit": "npm-run-all test:flow test:lint",
+    "prepush": "npm run test",
+    "commitmsg": "validate-commit-msg"
   },
   "pre-commit": [
     "flow",
@@ -49,10 +53,13 @@
     "file-loader": "^0.10.1",
     "flow-bin": "^0.42.0",
     "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.13.3",
+    "jest": "^19.0.2",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.14.1",
+    "validate-commit-msg": "^2.12.1",
     "vue": "^2.2.4",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.4",
