--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,13 @@
   "env": {
     "es6"     : true,
     "browser" : true,
-    "node"    : true
+    "node"    : true,
+    "jest"    : true
   },
   "extends": "eslint:recommended",
+  "plugins": [
+    "flowtype"
+  ],
   "rules": {},
   "parserOptions": {
     "sourceType": "module"
