--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^4.0.0",
@@ -61,6 +62,7 @@
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "sass-loader": "^6.0.3",
+    "snyk": "^1.29.0",
     "style-loader": "^0.16.1",
     "validate-commit-msg": "^2.12.1",
     "vue": "^2.3.0",
@@ -69,8 +71,7 @@
     "vuex": "^2.3.1",
     "webpack": "^2.4.1",
     "webpack-bundle-analyzer": "^2.4.0",
-    "webpack-dev-server": "^2.4.5",
-    "snyk": "^1.29.0"
+    "webpack-dev-server": "^2.4.5"
   },
   "engines": {
     "node": ">= 6.0.0"
