--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "test": "npm-run-all test:*",
-    "dev": "cross-env NODE_ENV=development BABEL_ENV=development webpack-dev-server",
-    "prod": "cross-env NODE_ENV=production BABEL_ENV=production webpack -p",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "prod": "cross-env NODE_ENV=production webpack",
     "test:lint": "eslint $npm_package_config_src",
     "test:flow": "flow $npm_package_config_src",
     "test:jest": "jest $npm_package_config_src --coverage",
@@ -44,8 +44,12 @@
   "author": "Hamid Raza <hamid.raza@zoomcar.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^23.4.0",
+    "babel-loader": "8.0.0-beta.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -54,24 +58,28 @@
     "dotenv": "^6.0.0",
     "eslint": "^5.0.1",
     "eslint-plugin-flowtype": "^2.32.1",
-    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "flow-bin": "^0.76.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.0",
     "jest": "^23.0.0",
+    "jest-serializer-vue": "^2.0.2",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
+    "postcss-loader": "^2.1.6",
     "sass-loader": "^7.0.3",
     "snyk": "^1.89.0",
     "style-loader": "^0.21.0",
     "validate-commit-msg": "^2.12.1",
     "vue": "^2.3.0",
+    "vue-jest": "^2.6.0",
     "vue-loader": "^15.2.6",
     "vue-template-compiler": "^2.3.0",
     "vuex": "^3.0.1",
     "webpack": "^4.16.1",
     "webpack-bundle-analyzer": "^2.4.0",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.4"
   },
   "engines": {
