--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "babel-jest": "^23.4.0",
     "babel-loader": "8.0.0-beta.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.0.0",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
